welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: ';' expected but '=' found.
nbpas:int=0
         ^Variables:3: error: ';' expected but '=' found.
retour:int=0
          ^