welcome.lessons.welcome.variables.Variables.scala.code
nbpas:int=0
retour:int=0
while(!estSurBiscuit()){
	avance()
	nbpas:=nbpas+1
}
prendBiscuit()
while (nbpas!=retour){
	recule()
	retour:=retour+1
}


